# NFLDraftDatabase

./: pyproject.toml
notebooks/: NFL_2022_Draft_Wiki_Scraping.ipynb
