[tool.poetry]
name = "nfl_draft_database"
version = "0.1.0"
description = ""
authors = ["fujii-sn <takafumi.fujii@sansan.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
